// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tuple, Optional and Rest Optional 1`] = `
"import MantaStyle from \\"@manta-style/runtime\\";
import * as MantaStyleHelper from \\"@manta-style/typescript-helpers\\";
const Test = MantaStyle.TypeAliasDeclaration(\\"Test\\", typeFactory => {
    const type = MantaStyle.TupleType([MantaStyle.NumberKeyword, MantaStyle.NumberKeyword, MantaStyle.OptionalType(MantaStyle.NumberKeyword)]);
    return type;
}, []);
"
`;

exports[`Tuple, Optional and Rest Rest 1`] = `
"import MantaStyle from \\"@manta-style/runtime\\";
import * as MantaStyleHelper from \\"@manta-style/typescript-helpers\\";
const Test = MantaStyle.TypeAliasDeclaration(\\"Test\\", typeFactory => {
    const type = MantaStyle.TupleType([MantaStyle.NumberKeyword, MantaStyle.NumberKeyword, MantaStyle.RestType(MantaStyle.StringKeyword)]);
    return type;
}, []);
"
`;

exports[`Tuple, Optional and Rest Tuple 1`] = `
"import MantaStyle from \\"@manta-style/runtime\\";
import * as MantaStyleHelper from \\"@manta-style/typescript-helpers\\";
const Test = MantaStyle.TypeAliasDeclaration(\\"Test\\", typeFactory => {
    const type = MantaStyle.TupleType([MantaStyle.NumberKeyword, MantaStyle.NumberKeyword]);
    return type;
}, []);
"
`;
